<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bckgr_color"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.activity.SingleEventInfoActivity"
    tools:showIn="@layout/activity_single_event_info">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content"
            style="@style/WidthMatchHeightWrap"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/state"
                android:paddingBottom="@dimen/min_padding">

                <TextView
                    style="@style/SingleEventActivityInputedTextColor"
                    android:textAppearance="?android:attr/textAppearanceMedium"

                    android:id="@+id/single_event_info_event_type"
                    android:paddingBottom="@dimen/min_padding" />

                <Button
                    android:id="@+id/button_state"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/content_main_button_state_height"
                    android:background="@drawable/btn_background"
                    android:layout_below="@+id/single_event_info_event_type"
                    android:padding="@dimen/content_main_button_state_padding"
                    android:textColor="@color/id_button_text_color"
                    android:textSize="@dimen/content_main_button_state_text_size"
                    android:paddingTop="@dimen/content_main_row_paddingTop"
                    android:paddingBottom="@dimen/content_main_row_paddingBottom" />

            </RelativeLayout>

            <include
                layout="@layout/divider_horizontal"/>

            <RelativeLayout
                android:id="@+id/created"
                style="@style/SingleEventActivityRow">

                <TextView
                    android:text="@string/single_event_activity_created"
                    style="@style/SingleEventActivityTextView"/>

                <TextView
                    android:id="@+id/created_date"
                    style="@style/SingleEventActivityInputedTextView"/>
            </RelativeLayout>

            <include layout="@layout/divider_horizontal" />

            <RelativeLayout
                android:id="@+id/registred"
                style="@style/SingleEventActivityRow">

                <TextView
                    android:text="@string/single_event_activity_registred"
                    style="@style/SingleEventActivityTextView"/>

                <TextView
                    android:id="@+id/registred_date"
                    style="@style/SingleEventActivityInputedTextView" />
            </RelativeLayout>

            <include layout="@layout/divider_horizontal" />

            <RelativeLayout
                android:id="@+id/deadline"
                style="@style/SingleEventActivityRow">

                <TextView
                    android:text="@string/single_event_activity_finish_up_to"
                    style="@style/SingleEventActivityTextView"/>

                <TextView
                    android:id="@+id/deadline_date"
                    style="@style/SingleEventActivityInputedTextView" />
            </RelativeLayout>

            <include layout="@layout/divider_horizontal" />

            <RelativeLayout
                android:id="@+id/responsible"
                style="@style/SingleEventActivityRow">

                <TextView
                    android:text="@string/single_event_activity_responsible"
                    style="@style/SingleEventActivityTextView"/>

                <TextView
                    android:id="@+id/responsible_name"
                    style="@style/SingleEventActivityInputedTextView" />
            </RelativeLayout>

            <include layout="@layout/divider_horizontal" />

            <RelativeLayout
                android:id="@+id/description"
                style="@style/AllWrapContent">

                <TextView
                    android:id="@+id/description_text"
                    style="@style/SingleEventActivityInputedTextColor.TextSize"
                    android:paddingTop="@dimen/content_main_row_paddingTop"
                    android:paddingBottom="@dimen/content_main_row_paddingBottom" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/photos"
                style="@style/WidthMatchHeightWrap">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    style="@style/WidthMatchHeightWrap">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
